@@ -6,6 +6,11 @@ import javax.swing.event.ListSelectionListener;
 import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 
 
@@ -13,15 +18,19 @@ public class Mainmenu implements ActionListener {
 
     private JFrame frame;
     private JLabel imageLabel;
-    private Comicbook comicbook = new Comicbook();
     private JList<String> displayList;
     private DefaultListModel<String> listModel;
     private ArrayList<Comicbook> comicList;
-    private ArrayList<Page> pages;
+    private int scrollPaneWidth;
 
     public Mainmenu(ArrayList<Comicbook> comicList) {
         this.comicList = comicList;
         initUI();
+    }
+
+    public void addComic(Comicbook comicbook) {
+        comicList.add(comicbook);
+        listModel.addElement(comicbook.getName());
     }
 
     public void initUI() {
@@ -31,12 +40,14 @@ public class Mainmenu implements ActionListener {
         Dimension dim = Toolkit.getDefaultToolkit().getScreenSize();
         frame.setSize(dim.width, dim.height);
 
+        scrollPaneWidth = frame.getSize().width / 8;
+
         frame.setLayout(new BorderLayout());
 
         //Gets the list of comics
         getComicList();
         JScrollPane scrollPane = new JScrollPane(displayList);
-        scrollPane.setPreferredSize(new Dimension(frame.getWidth() / 8, frame.getHeight()));
+        scrollPane.setPreferredSize(new Dimension(scrollPaneWidth, frame.getHeight()));
         frame.add(scrollPane, BorderLayout.WEST);
 
         //shows the first page when clicked on a comic
@@ -45,7 +56,47 @@ public class Mainmenu implements ActionListener {
 
         JButton selectButton = new JButton("Select Comic");
         selectButton.addActionListener(this);
-        frame.add(selectButton, BorderLayout.SOUTH);
+
+        JButton addButton = new JButton("Import Comic");
+        addButton.setPreferredSize(new Dimension(scrollPaneWidth, addButton.getPreferredSize().height));
+
+        addButton.addActionListener(e -> {
+            JFileChooser fileChooser = new JFileChooser();
+            fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+            fileChooser.setFileFilter(new javax.swing.filechooser.FileNameExtensionFilter("Comic Book Files", "cbr", "cbz", "nhlcomic"));
+
+            int result = fileChooser.showOpenDialog(frame);
+            if (result == JFileChooser.APPROVE_OPTION) {
+                File selectedFile = fileChooser.getSelectedFile();
+                Path targetDirectory = Path.of("imported_comics");
+
+                try {
+                    Path targetPath = targetDirectory.resolve(selectedFile.getName());
+                    Files.move(selectedFile.toPath(), targetPath, StandardCopyOption.REPLACE_EXISTING);
+                    System.out.println("Bestand verplaatst naar: " + targetPath);
+
+                    ArrayList<Page> pages;
+                    if (selectedFile.toString().endsWith(".cbr")) {
+                        pages = new CBRParser().extractPages(targetPath.toString());
+                    } else {
+                        pages = new CBZParser().extractPages(targetPath.toString());
+                    }
+
+                    Comicbook comicbook = new Comicbook(selectedFile.getName(), pages, false);
+                    addComic(comicbook);  // Voeg de nieuwe comic toe aan de bestaande lijst
+                } catch (IOException ex) {
+                    System.err.println("Fout bij het verplaatsen van bestand: " + ex.getMessage());
+                }
+            }
+        });
+
+
+        // Paneel met knoppen onder in het scherm -- Voor Import & Select
+        JPanel bottomPanel = new JPanel(new BorderLayout());
+        bottomPanel.add(selectButton, BorderLayout.CENTER);
+        bottomPanel.add(addButton, BorderLayout.WEST);
+
+        frame.add(bottomPanel, BorderLayout.SOUTH);
 
         frame.setVisible(true);
     }
@@ -66,7 +117,7 @@ public class Mainmenu implements ActionListener {
                         if (selectedIndex != -1) {
                             Comicbook selectedComicbook = comicList.get(selectedIndex);
                             System.out.println("Comic selected: " + selectedComicbook.getName());
-                            Page firstPage = selectedComicbook.getPages().get(0);
+                            Page firstPage = selectedComicbook.getPages().getFirst();
 
                             if (firstPage.image != null) {
                                 Image scaledImage = firstPage.image.getScaledInstance(500, 700, Image.SCALE_SMOOTH);  // Adjust dimensions as needed
